changed file names and references from words to strings and implemented notification system

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
   <link rel="icon" href="/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600&display=swap" rel="stylesheet">
-  <title>React.js Boilerplate</title>
+  <title>Stringify</title>
 </head>
 
 <body>
